@@ -37,14 +37,14 @@ class twindow;
 
 /** The event handler class for the widget library. */
 class tevent_handler
-#ifndef GUI2_NEW_EVENT_HANDLING
+#ifdef GUI2_OLD_EVENT_HANDLING
 	: public events::handler
 #endif
 {
 public:
 	tevent_handler();
 
-#ifdef GUI2_NEW_EVENT_HANDLING
+#ifndef GUI2_OLD_EVENT_HANDLING
 	virtual ~tevent_handler() {}
 #else
 	~tevent_handler() { leave(); }
