@@ -5,6 +5,8 @@ Version 1.7.6+svn:
    * Updated translations: Estonian, German, Russian, Serbian.
  * Units:
    * New animation WML and macros for the Drakes
+ * User interface:
+   * Enabled the new event handler by default now
  * Miscellaneous and bugfixes:
    * Add-ons download list now takes filtering into account for
      displaying descriptions
